Recuperación U2: solución, correción