@@ -1,52 +1,48 @@
 public class Recovery2CService {
 
     public static boolean esCodigoValido(String codigo) {
-        // TODO:
-        if(codigo.length() == 7){
-            return true;
-        }
-        // - longitud exacta 7
         // - null o en blanco -> false
-        if(codigo == null || codigo.isBlank());
-        return false;
+        // - longitud exacta 7
+        if (codigo == null) {
+            return false;
+        }
+
+        if (codigo.trim().isEmpty()) {
+            return false;
+        }
+
+        if (codigo.length() != 7) {
+            return false;
+        }
+
+        return true;
     }
 
     public static boolean esCategoriaValida(int categoria) {
-        // TODO: 1, 2, 3 o 4
-        if(categoria >=1 && categoria<=4){
-            return true;
-        }
-        return false;
+        // 1, 2, 3 o 4
+        return categoria >= 1 && categoria <= 4;
     }
 
     public static boolean esHoraValida(int horas) {
-        // TODO: 1..12
-        if(horas >=1 && horas <= 12){
-            return true;
-        }
-        return false;
+        // 1..12
+        return horas >= 1 && horas <= 12;
     }
 
-
     public static String clasificarPrioridad(int horas) {
-        // TODO:
         // BAJA <= 3
-        if (horas <= 3){
-            return "Prioridad baja";
-            // MEDIA 4..7
-        } else if (horas >= 4 && horas <=7) {
-            return "Prioridad media";
-        }else {
-            // ALTA > 7
-            return "Prioridad alta";
+        // MEDIA 4..7
+        // ALTA > 7
+        if (horas <= 3) {
+            return "BAJA";
+        } else if (horas >= 4 && horas <= 7) {
+            return "MEDIA";
+        } else {
+            return "ALTA";
         }
     }
 
     public static boolean requiereAutorizacion(int categoria, int horas) {
-        // TODO: Laptop (1) y horas > 8
-        if(categoria == 1 && horas > 8){
-            return true;
-        }
-        return false;
+        // Laptop (1) y horas > 8
+        return categoria == 1 && horas > 8;
     }
 }
